--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+examples/*.ipynb
 
 # IPython
 profile_default/
@@ -136,7 +137,6 @@ dmypy.json
 
 ### project specific additions:
 
-brainscore_language/data
 html
 .vscode
 *.code-workspace
